--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "2589b784-1a55-4cb4-903b-095370d3de32",
-  "name": "SEM-Functions-BDG",
+  "name": "Fixed Assest Additional Functionalities",
   "publisher": "Default publisher",
   "version": "21.0.0.0",
   "brief": "",
