--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "FA_CONVERSION",
+            "name": "ERRADEV",
             "request": "launch",
             "type": "al",
             "environmentType": "Sandbox",
             "tenant": "8beae494-639b-461e-9d2e-ad58f9467cf9",
-            "environmentName": "FA_CONVERSION",
+            "environmentName": "ERRADEV",
             "startupObjectId": 60003,
             "startupObjectType": "Page",
             "breakOnError": "ExcludeTry",
@@ -17,39 +17,39 @@
             //"schemaUpdateMode": "ForceSync",
             //"startupCompany": "service item test"
         },
-        {
-            "name": "Pera Medikal Sandbox",
-            "request": "launch",
-            "type": "al",
-            "environmentType": "Sandbox",
-            "tenant": "270c2df0-b681-41a1-b072-5aea0f64f459",
-            "environmentName": "SKITEMTEST",
-            "startupObjectId": 60003,
-            "startupObjectType": "Page",
-            "breakOnError": "ExcludeTry",
-            "launchBrowser": true,
-            "enableLongRunningSqlStatements": true,
-            "enableSqlInformationDebugger": true,
-            //"schemaUpdateMode": "ForceSync",
-            //"startupCompany": "service item test"
-        },
-        {
-            "name": "Localization_DEV",
-            "type": "al",
-            "request": "launch",
-            "environmentType": "Sandbox",
-            "startupObjectId": 9301,
-            "startupObjectType": "Page",
-            "breakOnError": "ExcludeTry",
-            "breakOnRecordWrite": "None",
-            "launchBrowser": true,
-            "enableSqlInformationDebugger": true,
-            "enableLongRunningSqlStatements": true,
-            "longRunningSqlStatementsThreshold": 500,
-            "numberOfSqlStatements": 10,
-            "server": "https://businesscentral.dynamics.com",
-            "tenant" : "infotekas.onmicrosoft.com",
-            "environmentName": "Localization_DEV",
-        }
+        // {
+        //     "name": "Pera Medikal Sandbox",
+        //     "request": "launch",
+        //     "type": "al",
+        //     "environmentType": "Sandbox",
+        //     "tenant": "270c2df0-b681-41a1-b072-5aea0f64f459",
+        //     "environmentName": "SKITEMTEST",
+        //     "startupObjectId": 60003,
+        //     "startupObjectType": "Page",
+        //     "breakOnError": "ExcludeTry",
+        //     "launchBrowser": true,
+        //     "enableLongRunningSqlStatements": true,
+        //     "enableSqlInformationDebugger": true,
+        //     //"schemaUpdateMode": "ForceSync",
+        //     //"startupCompany": "service item test"
+        // },
+        // {
+        //     "name": "Localization_DEV",
+        //     "type": "al",
+        //     "request": "launch",
+        //     "environmentType": "Sandbox",
+        //     "startupObjectId": 9301,
+        //     "startupObjectType": "Page",
+        //     "breakOnError": "ExcludeTry",
+        //     "breakOnRecordWrite": "None",
+        //     "launchBrowser": true,
+        //     "enableSqlInformationDebugger": true,
+        //     "enableLongRunningSqlStatements": true,
+        //     "longRunningSqlStatementsThreshold": 500,
+        //     "numberOfSqlStatements": 10,
+        //     "server": "https://businesscentral.dynamics.com",
+        //     "tenant" : "infotekas.onmicrosoft.com",
+        //     "environmentName": "Localization_DEV",
+        // }
     ]
 }
